--- a/views/layouts/partials/navbar.jade
+++ b/views/layouts/partials/navbar.jade
@@ -3,11 +3,7 @@
     try{ace.settings.check('navbar' , 'fixed')}catch(e){}
   #navbar-container.navbar-container
     // #section:basics/sidebar.mobile.toggle
-    button#menu-toggler.navbar-toggle.menu-toggler.pull-left(type='button', data-target='#sidebar')
-      span.sr-only Toggle sidebar
-      span.icon-bar
-      span.icon-bar
-      span.icon-bar
+    span#menu-toggler
     // /section:basics/sidebar.mobile.toggle
     .navbar-header.pull-left
       // #section:basics/navbar.layout.brand
@@ -17,16 +13,17 @@
           | &nbsp;#{siteTitle}
       // /section:basics/navbar.layout.brand
       // #section:basics/navbar.toggle
-      button.pull-right.navbar-toggle.navbar-toggle-img.collapsed(type='button', data-toggle='collapse', data-target='.navbar-buttons')
-        span.sr-only Toggle user menu
-        img(src='/assets/avatars/user.jpg', alt="Jason's Photo")
       // /section:basics/navbar.toggle
     // #section:basics/navbar.dropdown
     .navbar-buttons.navbar-header.pull-right.collapse.navbar-collapse(role='navigation')
       ul.nav.ace-nav
         li.transparent
+        li.light-orange
           a.dropdown-toggle(data-toggle='dropdown', href='#')
             #time
+              span
+                i.ace-icon.fa-pulse.fa.fa-clock-o
+                |&nbsp;
               span#day
               |&nbsp;
               span#hours
@@ -36,80 +33,6 @@
               span#sec
               |&nbsp;
               span#ampm
-        li.light-orange
-          a.dropdown-toggle(data-toggle='dropdown', href='#')
-            i.ace-icon.fa.fa-bell
-          .dropdown-menu-right.dropdown-navbar.dropdown-menu.dropdown-caret.dropdown-close
-            .tabbable
-              ul.nav.nav-tabs
-                li.active
-                  a(data-toggle='tab', href='#navbar-messages')
-                    | Messages
-                    span.badge.badge-danger 5
-              // .nav-tabs
-              .tab-content
-                #navbar-messages.tab-pane.in.active
-                  ul.dropdown-menu-right.dropdown-navbar.dropdown-menu
-                    li.dropdown-content
-                      ul.dropdown-menu.dropdown-navbar
-                        li
-                          a(href='#')
-                            img.msg-photo(src='/assets/avatars/avatar.png', alt="Alex's Avatar")
-                            span.msg-body
-                              span.msg-title
-                                span.blue Alex:
-                                |Ciao sociis natoque penatibus et auctor ...
-                              span.msg-time
-                                i.ace-icon.fa.fa-clock-o
-                                span a moment ago
-                        li
-                          a(href='#')
-                            img.msg-photo(src='/assets/avatars/avatar3.png', alt="Susan's Avatar")
-                            span.msg-body
-                              span.msg-title
-                                span.blue Susan:
-                                |Vestibulum id ligula porta felis euismod ...
-                              span.msg-time
-                                i.ace-icon.fa.fa-clock-o
-                                span 20 minutes ago
-                        li
-                          a(href='#')
-                            img.msg-photo(src='/assets/avatars/avatar4.png', alt="Bob's Avatar")
-                            span.msg-body
-                              span.msg-title
-                                span.blue Bob:
-                                |Nullam quis risus eget urna mollis ornare ...
-                              span.msg-time
-                                i.ace-icon.fa.fa-clock-o
-                                span 3:15 pm
-                        li
-                          a(href='#')
-                            img.msg-photo(src='/assets/avatars/avatar2.png', alt="Kate's Avatar")
-                            span.msg-body
-                              span.msg-title
-                                span.blue Kate:
-                                |Ciao sociis natoque eget urna mollis ornare ...
-                              span.msg-time
-                                i.ace-icon.fa.fa-clock-o
-                                span 1:33 pm
-                        li
-                          a(href='#')
-                            img.msg-photo(src='/assets/avatars/avatar5.png', alt="Fred's Avatar")
-                            span.msg-body
-                              span.msg-title
-                                span.blue Fred:
-                                |Vestibulum id penatibus et auctor  ...
-                              span.msg-time
-                                i.ace-icon.fa.fa-clock-o
-                                span 10:09 am
-                    li.dropdown-footer
-                      a(href='inbox.html')
-                        | See all messages
-                        i.ace-icon.fa.fa-arrow-right
-                // /.tab-pane
-              // /.tab-content
-            // /.tabbable
-          // /.dropdown-menu
         // #section:basics/navbar.user_menu
         li.light-blue
           a.dropdown-toggle(data-toggle='dropdown', href='#')
