[Bug fix] fix the bug that makes messages not to render properly. Messages render showing decoded html

--- a/views/message/partials/messagebody.jade
+++ b/views/message/partials/messagebody.jade
@@ -11,7 +11,7 @@
 .hr.hr-double
 // #section:pages/inbox.message-body
 .message-body
-  p= message.message
+  p!= message.message
 if message.attachment.attached
   .hr.hr-double
   // #section:pages/inbox.message-attachment
