Add the logic to select message recipients from the right sources for patients and doctors respectively

--- a/views/message/partials/compose.jade
+++ b/views/message/partials/compose.jade
@@ -5,11 +5,18 @@ form#id-message-form.hide.form-horizontal.message-form.col-xs-12
       label.col-xs-3.control-label.no-padding-right(for="form-field-recipient") Recipient:
       .col-xs-6
         select#form-field-recipient.required.tag-input-style.chosen-select.form-control(name='recipient', multiple='', data-placeholder='Choose Recipient ...')
-          if (session.doctors).length > 0
-            each doc in session.doctors
-              option(value= doc.id) #{doc.name}
+          if (session.isDoctor)
+            if (session.patients).length > 0
+              each patient in session.patients
+                option(value= patient.id) #{patient.name}
+            else
+              option(value='') No Recipients found (No patients found)
           else
-            option(value= '') No Recipients found (Please request for Appointment)
+            if (session.doctors).length > 0
+              each doc in session.doctors
+                option(value= doc.id) #{doc.name}
+            else
+              option(value= '') No Recipients found (Please request for Appointment)
     .hr.hr-18.dotted
     .form-group
       label.col-sm-3.control-label.no-padding-right(for="form-field-subject") Subject:
