Remove the pulse effect from the time on the navbar

--- a/views/layouts/partials/navbar.jade
+++ b/views/layouts/partials/navbar.jade
@@ -22,7 +22,7 @@
           a.dropdown-toggle(data-toggle='dropdown', href='#')
             #time
               span
-                i.ace-icon.fa-pulse.fa.fa-clock-o
+                i.ace-icon.fa.fa-clock-o
                 |&nbsp;
               span#day
               |&nbsp;
