Add Title subtitle holder(small) block in main defaut layout

--- a/views/layouts/default.jade
+++ b/views/layouts/default.jade
@@ -65,7 +65,8 @@ html(lang='en')
               include ./partials/doctors-box
             .page-header
               h1= pageTitle ? pageTitle : 'Page Title' 
-            // /.page-header
+                small
+                  block small
             .row
               .col-xs-12
                 // PAGE CONTENT BEGINS
