Modify default topbar name from dashboard topbar to just topbar
This is to allow dashboard-topbar to be used for the dashboard exclusively

--- a/views/doctors/profile.jade
+++ b/views/doctors/profile.jade
@@ -10,7 +10,7 @@ append pagespecificstyles
 //- block chat
 block sidebar
 block topbar
-  include ../partials/dashboard-topbar
+  include ../partials/topbar
 append scripts
   //- page specific scripts
   script(type='text/javascript').
