--- a/views/patients/list.jade
+++ b/views/patients/list.jade
@@ -3,7 +3,7 @@ append pagespecificstyles
   //- 
 block sidebar
 block topbar
-  include ../partials/dashboard-topbar
+  include ../partials/topbar
 append scripts
   script(src='/javascripts/jquery.quicksearch.js')
   script(type='text/javascript').
