--- a/views/patients/profile.jade
+++ b/views/patients/profile.jade
@@ -4,7 +4,7 @@ append pagespecificstyles
 //- block chat
 block sidebar
 block topbar
-  include ../partials/dashboard-topbar
+  include ../partials/topbar
 append scripts
   //- page specific scripts
 block content
