--- a/views/video.jade
+++ b/views/video.jade
@@ -10,7 +10,7 @@ append pagespecificstyles
 block doctors
 block sidebar
 block topbar
-  include ./partials/dashboard-topbar
+  include ./partials/topbar
 append scripts
   //- page specific scripts
   script(src='/javascripts/adapter.js')
