--- a/views/calendar.jade
+++ b/views/calendar.jade
@@ -5,7 +5,7 @@ append pagespecificstyles
 //- block doctors
 block sidebar
 block topbar
-  include ./partials/dashboard-topbar
+  include ./partials/topbar
 append scripts
   //- page specific scripts
   script(src='/assets/js/jquery-ui.custom.js')
