--- a/views/doctors/list.jade
+++ b/views/doctors/list.jade
@@ -4,7 +4,7 @@ append pagespecificstyles
 //- block chat
 block sidebar
 block topbar
-  include ../partials/dashboard-topbar
+  include ../partials/topbar
 append scripts
   //- page specific scripts
   script(src='/assets/js/dataTables/jquery.dataTables.js')
