--- a/views/record.jade
+++ b/views/record.jade
@@ -4,7 +4,7 @@ append pagespecificstyles
 //- block doctors
 block sidebar
 block topbar
-  include ./partials/dashboard-topbar
+  include ./partials/topbar
 append scripts
   //- page specific scripts
 
