Add the admins list route Add the admins list route to the admin route and also the jade template and a link from the topbar jade template

--- a/views/partials/topbar.jade
+++ b/views/partials/topbar.jade
@@ -6,6 +6,11 @@ button.pull-left.navbar-toggle.collapsed(data-target='#sidebar2', data-toggle='c
   ul.nav.nav-list
     if (session.userGroup === 'Admin')
       li.hover
+        a(href='/admin')
+          i.menu-icon.fa.fa-users
+          span.menu-text Administrators
+        b.arrow
+      li.hover
         a(href='/admin/hospitals')
           i.menu-icon.fa.fa-hospital-o
           span.menu-text  Hospitals 
