Remove hospital jqgrid table caption Looks way better without it

--- a/views/admin/hospitals.jade
+++ b/views/admin/hospitals.jade
@@ -134,7 +134,7 @@ append scripts
         },
     
         editurl: "/admin/hospital/push?_csrf=#{csrftoken}",//nothing is saved
-        caption: "Hospital List"
+        //- caption: "Hospital List"
     
         //,autowidth: true,
     
