Add the Hospital user group to the application logic Add the redirect on login for members of the group; Add the menu group for the members, and Add the logic to allow Hospital admins (non admins to some extend) access the admin only for managing their doctors

--- a/views/partials/topbar.jade
+++ b/views/partials/topbar.jade
@@ -20,6 +20,12 @@ button.pull-left.navbar-toggle.collapsed(data-target='#sidebar2', data-toggle='c
           i.menu-icon.fa.fa-heartbeat
           span.menu-text  Patients 
         b.arrow
+    else if (session.userGroup === 'Hospital')
+      li.hover
+        a(href='/admin/doctors')
+          i.menu-icon.fa.fa-user-md
+          span.menu-text Doctors
+        b.arrow
     else
       li.hover
         if (session.isDoctor)
