[Bug Fix] Bug causing hospital admins profile page to throw an error
this is because the check used to hide doctors-box section did not include
hospital admins as admins

--- a/views/layouts/partials/doctors-box.jade
+++ b/views/layouts/partials/doctors-box.jade
@@ -1,4 +1,4 @@
-if (session.userGroup !== 'Admin')
+if (session.userGroup !== 'Admin' && session.userGroup !== 'Hospital')
   #ace-settings-container.ace-settings-container
     #ace-settings-btn.btn.btn-app.btn-xs.btn-warning.ace-settings-btn
       i.ace-icon.fa.fa-user-md.bigger-130
