Make the first field in the Auth module autofocus
The username field in login, email field in forgot password and the password field in password reset

--- a/views/auth/forgot-password.jade
+++ b/views/auth/forgot-password.jade
@@ -30,7 +30,7 @@ block boxContent
             input(type='hidden', name='_csrf', value=csrftoken)
             label(class='block clearfix')
               span(class='block input-icon input-icon-right')
-                input(type='email', class='form-control', placeholder='Email', name='email', value= messages.email ? messages.email : '')
+                input(type='email', class='form-control', placeholder='Email', name='email', value= messages.email ? messages.email : '', autofocus)
                 i(class='ace-icon fa fa-envelope')
                   
             div(class='clearfix')
