--- a/views/auth/reset-password.jade
+++ b/views/auth/reset-password.jade
@@ -30,7 +30,7 @@ block boxContent
             input(type='hidden', name='_csrf', value=csrftoken)
             label(class='block clearfix')
               span(class='block input-icon input-icon-right')
-                input(type='password', class='form-control', placeholder='Password', name='password')
+                input(type='password', class='form-control', placeholder='Password', name='password', autofocus)
                 i(class='ace-icon fa fa-lock')
             label(class='block clearfix')
               span(class='block input-icon input-icon-right')
