--- a/views/video.jade
+++ b/views/video.jade
@@ -7,151 +7,212 @@ append pagespecificstyles
   //-   |  -moz-filter: hue-rotate(180deg) saturate(200%);
   //-   |  -webkit-filter: hue-rotate(180deg) saturate(200%);
   //-   |}
+  link(rel='stylesheet', href='/assets/css/chosen.css')
+  link(rel='stylesheet', href='/stylesheets/video.css')
 block doctors
 block sidebar
 block topbar
   include ./partials/topbar
 append scripts
   //- page specific scripts
-  script(src='/javascripts/adapter.js')
+  //- script(src='/javascripts/adapter.js')
+  script(src='/assets/js/bootbox.js')
+  script(src='/assets/js/chosen.jquery.js')
+  script(type='text/javascript', src='/javascripts/peer.js')
+  //- script(type='text/javascript', src='http://cdn.peerjs.com/0.3/peer.min.js')
   script(type='text/javascript').
-    navigator.getUserMedia = navigator.getUserMedia ||
-      navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
-    //- var constraints = {video: true, audio: true};
-    //- 
-    //- function successCallback(localMediaStream) {
-    //-   window.stream = localMediaStream;
-    //-   var video =document.querySelector("video");
-    //-   video.src = window.URL.createObjectURL(localMediaStream);
-    //-   video.play();
-    //- }
-    //- 
-    //- function errorCallback(error) {
-    //-   console.log("navigator.getUserMedia error: ", error);
-    //- }
-    //- 
-    //- navigator.getUserMedia(constraints, successCallback, errorCallback);
+    //- Compatibiltiy shim
+    navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
     
-    var localStream, localPeerConnection, remotePeerConnection;
+    //- PeerJS Object
+    var peer = new Peer('#{session.userId}', {
+      host: 'localhost',
+      port: '3000',
+      path: '/peer-server',
+      config: {
+        'iceServers': [
+          {url: 'stun:stun.l.google.com:19302'} // Pass in optional STUN and TURN server for maximum network compatibility.
+        ]
+      },
+      debug: 3
+    });
     
-    var localVideo = document.getElementById("localVideo");
-    var remoteVideo = document.getElementById("remoteVideo");
-    
-    var startButton = document.getElementById("startButton");
-    var callButton = document.getElementById("callButton");
-    var hangupButton = document.getElementById("hangupButton");
-    startButton.disabled = false;
-    callButton.disabled = true;
-    hangupButton.disabled = true;
-    startButton.onclick = start;
-    callButton.onclick = call;
-    hangupButton.onclick = hangup;
-    
-    function trace(text) {
-      console.log((performance.now() / 1000).toFixed(3) + ": " + text);
-    }
-    
-    function gotStream(stream){
-      trace("Received local stream");
-      localVideo.src = URL.createObjectURL(stream);
-      localStream = stream;
-      callButton.disabled = false;
-    }
-    
-    function start() {
-      trace("Requesting local stream");
-      startButton.disabled = true;
-      navigator.getUserMedia({audio:true, video:true}, gotStream,
-        function(error) {
-          trace("getUserMedia error: ", error);
-        });
-    }
-    
-    function call() {
-      callButton.disabled = true;
-      hangupButton.disabled = false;
-      trace("Starting call");
-    
-      if (localStream.getVideoTracks().length > 0) {
-        trace('Using video device: ' + localStream.getVideoTracks()[0].label);
-      }
-      if (localStream.getAudioTracks().length > 0) {
-        trace('Using audio device: ' + localStream.getAudioTracks()[0].label);
-      }
-    
-      var servers = null;
-    
-      localPeerConnection = new RTCPeerConnection(servers);
-      trace("Created local peer connection object localPeerConnection");
-      localPeerConnection.onicecandidate = gotLocalIceCandidate;
-    
-      remotePeerConnection = new RTCPeerConnection(servers);
-      trace("Created remote peer connection object remotePeerConnection");
-      remotePeerConnection.onicecandidate = gotRemoteIceCandidate;
-      remotePeerConnection.onaddstream = gotRemoteStream;
-    
-      localPeerConnection.addStream(localStream);
-      trace("Added localStream to localPeerConnection");
-      localPeerConnection.createOffer(gotLocalDescription,handleError);
-    }
-    
-    function gotLocalDescription(description){
-      localPeerConnection.setLocalDescription(description);
-      trace("Offer from localPeerConnection: \n" + description.sdp);
-      remotePeerConnection.setRemoteDescription(description);
-      remotePeerConnection.createAnswer(gotRemoteDescription,handleError);
-    }
-    
-    function gotRemoteDescription(description){
-      remotePeerConnection.setLocalDescription(description);
-      trace("Answer from remotePeerConnection: \n" + description.sdp);
-      localPeerConnection.setRemoteDescription(description);
-    }
-    
-    function hangup() {
-      trace("Ending call");
-      localPeerConnection.close();
-      remotePeerConnection.close();
-      localPeerConnection = null;
-      remotePeerConnection = null;
-      hangupButton.disabled = true;
-      callButton.disabled = false;
-    }
-    
-    function gotRemoteStream(event){
-      remoteVideo.src = URL.createObjectURL(event.stream);
-      trace("Received remote stream");
-    }
-    
-    function gotLocalIceCandidate(event){
-      if (event.candidate) {
-        remotePeerConnection.addIceCandidate(new RTCIceCandidate(event.candidate));
-        trace("Local ICE candidate: \n" + event.candidate.candidate);
-      }
-    }
-    
-    function gotRemoteIceCandidate(event){
-      if (event.candidate) {
-        localPeerConnection.addIceCandidate(new RTCIceCandidate(event.candidate));
-        trace("Remote ICE candidate: \n " + event.candidate.candidate);
-      }
-    }
-    
-    function handleError(){}
+    peer.on('open', function(){
+      $('#my-id').text(peer.id);
+    });
 
+    // Receiving a call
+    peer.on('call', function(call){
+      // Answer the call automatically (instead of prompting user) for demo purposes
+      
+      bootbox.confirm({
+        message: "<span class='ace-nav'><img src='" + call.metadata.callerPix + 
+          "' class='nav-user-photo'/></span> <b>" + call.metadata.caller + "</b>, Incoming call ...",
+        buttons: {
+          confirm: {
+            label: "<i class='ace-icon fa fa-check'></i>Accept", className: "btn btn-success btn-sm btn-white btn-round"
+          },
+          cancel: {
+            label: "<i class='ace-icon fa fa-times'></i>Reject", className: "btn btn-danger btn-sm btn-white btn-round"
+          }
+        },
+        callback: function(result) {
+          if (result) {
+            call.answer(window.localStream);
+            step3(call, call.metadata.caller);
+          } else {
+            window.existingCall.close();
+            step2();
+          }
+        }
+      });
+    });
+    
+    peer.on('error', function(err){
+      //- console.log(err);
+      last_gritter = $.gritter.add({
+        title: ')-: Recipient Unavailable',
+        text: 'Please try again later.',
+        class_name: 'gritter-error gritter-right gritter-light',
+        time: 2000
+      });
+      // Return to step 2 if error occurs
+      step2();
+    });
+
+    // Click handlers setup
+    $(function(){
+      $('#make-call').click(function(){
+        // Initiate a call!
+        var value = $('#callto-id').chosen().val();
+        var callee = $('#callto-id option:selected').html(),
+          caller = "#{session.username}",
+          pix = "#{session.userPicture}";
+        
+        //- console.log(callee, value)
+        if (!value) {
+          last_gritter = $.gritter.add({
+            title: ')-: Missing Recipient',
+            text: 'Please select from the list provided.',
+            class_name: 'gritter-error gritter-right gritter-light',
+            time: 2500
+          });
+          return;
+        }
+        
+        var call = peer.call(value[0], window.localStream, {
+          metadata: {
+            callee: callee,
+            caller: caller,
+            callerPix: pix
+          }
+        });
+
+        step3(call, callee);
+      });
+
+      $('#end-call').click(function(){
+        window.existingCall.close();
+        step2();
+      });
+
+      // Retry if getUserMedia fails
+      $('#step1-retry').click(function(){
+        $('#step1-error').hide();
+        step1();
+      });
+
+      // Get things started
+      step1();
+    });
+
+    function step1 () {
+      // Get audio/video stream
+      navigator.getUserMedia({audio: true, video: true}, function(stream){
+        // Set your video displays
+        $('#localVideo').prop('src', URL.createObjectURL(stream));
+
+        window.localStream = stream;
+        step2();
+      }, function(){ $('#step1-error').show(); });
+    }
+
+    function step2 () {
+      $('#step1, #step3').hide();
+      $('#step2').show();
+    }
+
+    function step3 (call, callee) {
+      // Hang up on an existing call if present
+      if (window.existingCall) {
+        window.existingCall.close();
+      }
+
+      console.log(call)
+      // Wait for stream on the call, then set peer video display
+      call.on('stream', function(stream){
+        $('#remoteVideo').prop('src', URL.createObjectURL(stream));
+      });
+
+      // UI stuff
+      window.existingCall = call;
+      $('#their-id').text(callee);
+      call.on('close', step2);
+      $('#step1, #step2').hide();
+      $('#step3').show();
+    }
+    $('.chosen-select').chosen({allow_single_deselect:true,
+    max_selected_options: 1, width: '75%'});
 block content
   .row
-    .col-md-7.col-centered
-      div(style='position: absolute; bottom: 5px; right: 15px; width: 250px; height: 190px')
-        //- video(width='100%')
-        video(width='100%', id='remoteVideo', autoplay)
-      //- video(width='100%')
-      video(width='100%', id='localVideo', autoplay)
-  //- video(id='localVideo', autoplay)
-  //- video(id='remoteVideo', autoplay)
-  //-   
-  div
-    button(id='startButton') start
-    button(id='callButton') call
-    button(id='hangupButton') Hang Up
+    .col-xs-8
+      .video
+        video(id='remoteVideo', autoplay)
+    .col-xs-4
+      .controls
+        h4 Video Call
+        //- Get local audio/video stream
+        #step1
+          p Please click `allow` on the top of the screen to grant webcam and microphone access for calls. 
+          .hide-step.alert.alert-danger#step1-error
+            p Failed to access the webcam and microphone. Make sure to click `allow` when asked for permission by the browser.
+            button.btn.btn-sm.btn-danger.btn-white.btn-round#step1-retry
+              i.ace-icon.fa.fa-refresh.bigger-110.red2
+              |&nbsp;Retry
+        //- Make calls to others
+        .hide-step#step2
+          //- p 
+          //-   |Your id:
+          //-   span#my-id ...
+          //- h5 Make a call
+          .alert
+            //- input#callto-id(type='text', placeholder='*** Make a call ***')
+            select#callto-id.required.tag-input-style.chosen-select.form-control(name='recipient', multiple='', data-placeholder='Recipient ...')
+              if (session.isDoctor)
+                if (session.patients).length > 0
+                  each patient in session.patients
+                    option(value= patient.id) #{patient.name}
+                else
+                  option(value='') No Recipients found (No patients found)
+              else
+                if (session.doctors).length > 0
+                  each doc in session.doctors
+                    option(value= doc.id) #{doc.name}
+                else
+                  option(value= '') No Recipients found (Please request for Appointment)
+            |&nbsp;
+            button.btn.btn-sm.btn-success.btn-white.btn-round#make-call
+              i.ace-icon.fa.fa-video-camera.bigger-110.green2
+              |&nbsp;Call
+        //- Call in progress
+        .hide-step#step3
+          .alert
+            |Calling&nbsp;
+            span.calling#their-id ...
+            |&nbsp;&nbsp;
+            button.btn.btn-sm.btn-danger.btn-white.btn-round#end-call
+              i.ace-icon.fa.fa-times.bigger-110.red2
+              |&nbsp;End call
+      .video
+        video(id='localVideo', muted='true', autoplay)
     
