[Bug Fix]Make patient profile  button link to the  page Initially it was not linking to anything

--- a/views/patients/list.jade
+++ b/views/patients/list.jade
@@ -70,7 +70,7 @@ block content
                     .time!= user.bioData.about
                     .hr.dotted.hr-8
                     .tools.action-buttons
-                      a(href='#')
+                      a(href='/chat/video')
                         i.ace-icon.fa.fa-phone-square.blue.bigger-150
                         | &nbsp;Call
                       //- i.ace-icon.fa.fa-clock-o.middle.bigger-120.orange
