Remove Doctos-box section from all except the Doctors page this creates more problems than it solves. Patients and Doctors List are passed into the session on login, so any alteration after login doesnt reflect until the user re-logins

--- a/views/calendar.jade
+++ b/views/calendar.jade
@@ -2,7 +2,7 @@ extends ./layouts/default
 append pagespecificstyles
   link(rel='stylesheet', href='/assets/css/jquery-ui.custom.css')
   link(rel='stylesheet', href='/assets/css/fullcalendar.css')
-//- block doctors
+block doctors
 block sidebar
 block topbar
   include ./partials/topbar
