--- a/views/message/inbox.jade
+++ b/views/message/inbox.jade
@@ -3,7 +3,7 @@ append pagespecificstyles
   //- page specific styles
   //- link(rel='stylesheet', href='/assets/css/jquery-ui.custom.css')
   link(rel='stylesheet', href='/assets/css/chosen.css')
-//- block doctors
+block doctors
 block sidebar
 block topbar
   include ../partials/topbar
