--- a/views/patients/list.jade
+++ b/views/patients/list.jade
@@ -2,6 +2,7 @@ extends ../layouts/default
 append pagespecificstyles
   //- 
 block sidebar
+block doctors
 block topbar
   include ../partials/topbar
 append scripts
