--- a/views/video.jade
+++ b/views/video.jade
@@ -26,14 +26,8 @@ append scripts
     
     //- PeerJS Object
     var peer = new Peer('#{session.userId}', {
-      host: 'localhost',
-      port: '3000',
-      path: '/peer-server',
-      config: {
-        'iceServers': [
-          {url: 'stun:stun.l.google.com:19302'} // Pass in optional STUN and TURN server for maximum network compatibility.
-        ]
-      },
+      key: 'he3gxx6jfoxyldi',
+      secure: true,
       debug: 3
     });
     
