--- a/views/patients/list.jade
+++ b/views/patients/list.jade
@@ -48,10 +48,10 @@ block content
     .alert.alert-danger.center #{messages.error}
   .row
     .col-xs-12
-      if patients.length == 0
+      if (session.patients).length == 0
         .alert.alert-info.center No patients to display. 
       else
-        each user in patients
+        each user in session.patients
           .profile-users.clearfix
             .itemdiv.memberdiv
               .inline.pos-rel
