--- a/views/video.jade
+++ b/views/video.jade
@@ -27,7 +27,10 @@ append scripts
     //- PeerJS Object
     var peer = new Peer('#{session.userId}', {
       key: 'he3gxx6jfoxyldi',
-      debug: 3
+      debug: 3,
+      config: {'iceServers' : [
+        {url: 'stun:stun.l.google.com:19302'}
+      ]}
     });
     
     peer.on('open', function(){
